--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,8 @@
 ja:
+  mypages:
+    edit: 
+      notice: "プロフィールを更新しました。"
+      alert: "プロフィールの更新に失敗しました。"
   locations:
     create:
       notice: "場所を保存しました。"
